<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fragment_page_relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_page_smiley_view"
        android:layout_width="@dimen/size_image_width"
        android:layout_height="@dimen/size_image_height"
        android:layout_centerInParent="true"
        android:contentDescription="@string/smiley_view"/>

    <ImageButton
        android:id="@+id/fragment_page_btn_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_note_add_black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:padding="15dp"
        android:contentDescription="@string/comment_btn"/>

    <ImageButton
        android:id="@+id/fragment_page_btn_historic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_history_black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:padding="15dp"
        android:contentDescription="@string/historic_btn"/>

    <ImageButton
        android:id="@+id/fragment_page_btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_action_share"
        android:background="@null"
        android:padding="15dp"
        android:contentDescription="@string/share"/>

</RelativeLayout>